# MCU-Peripheral-Module-Library

./: .gitignore  CMakeLists.txt  README.md  build.ninja
device/iic/Lib/: ist8310.h  mpu6050.h
device/iic/Reg/: ist8310_reg.h  mpu6050_reg.h
device/iic/Src/: ist8310.c  mpu6050.c
device/iic/ist8310/: ist8310.c  ist8310.h
device/iic/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_reg.h
device/iic/ssd1306_oled/: ssd1306.c  ssd1306.h
device/iic/ssd1306_oled/config/: 096oled_config.cfg  ssd1306_config.h
device/iic/ssd1306_oled/font/: oled_f8x16.h
device/spi/Lib/: nrf24l01.h
device/spi/Src/: nrf24l01.c
device/spi/nrf24l01/: nrf24l01.c  nrf24l01.h  nrf24l01_reg.h
device/spi/st7735s/: st7735s.c  st7735s.h
device/spi/st7735x/: st7735x.c  st7735x.h
device/spi/st7735x/font/: font.h
device/uart/hc05/: hc05.c  hc05.h
modules/Lib/: mahony.h
modules/Src/: pid.c
modules/mahony/: mahony.c  mahony.h
modules/pid/: pid.h
modules/vofa/: vofa.c  vofa.drawio  vofa.h
